--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
 		<link rel="stylesheet" type="text/css" href="/styles.css"/>
 	</head>
 	<body>
-	 <h1>Hey Node Ninjas!</h1>
-	 <p>This is the best HTML document on the internet.</p>
+	 <h1>404</h1>
+	 <p>The page you are looking for doesn't exist.</p>
 	 <p><a href="/home">Home</a> | <a href="/contact">Contact Page</a></p>
 	</body>
 </html>
