--- a/404.html
+++ b/404.html
@@ -8,8 +8,7 @@
 		</style>
 	</head>
 	<body>
-	 <h1>Hey Node Ninjas!</h1>
-	 <p>This is the best HTML document on the internet.</p>
-	
+	 <h1>404</h1>
+	 <p>Page Not Found</p>
 	</body>
 </html>
