--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,7 @@
 		</style>
 	</head>
 	<body>
-	 <h1>Hey Node Ninjas!</h1>
-	 <p>This is the best HTML document on the internet.</p>
-	
+	 <h1>Contact Info</h1>
+	 <p>Here is my contact info.</p>
 	</body>
 </html>
